---------------------------------------------------------------------------------------------------
Version: 0.5.7
Date: ???
  Changes:
    - Disabled Resin to Rubber recipe
    - Reblanced Insulated wire recipe to increase rubber consumption
    - Removed Glass smelting 1 as prerequisite for Sniper Rifle
    - Reduced Electrolyser volume
  Bugfixes:
    - Fixed startup error with Mad Clown's mods enabled
    - Hid gunmetal item, recipes, and tech
    - Fixed that basic steel smelting was half price
    - Removed fuel value from diesel so it would not show in helper mods
    - Fixed duplicate hazard concrete unlocks
---------------------------------------------------------------------------------------------------
Version: 0.5.6
Date: 14.08.2021
  Changes:
    - Re-enable early glass recipe as Arboretum now require glass
---------------------------------------------------------------------------------------------------
Version: 0.5.5
Date: 14.08.2021
  Changes:
    - Reverted default settings override of Bob's Adjustable Inserters mod
    - Made Long Inserters ignore tech cost modifier
    - Streamlined hand crafting of wood pellets and boards
    - Standardized terrain vehicle speed
    - Refund all landfill when painting over sand islands
    - Added missing tech prerequisites
    - Reduced cost of Water Treatment tech
    - Hid recipe Wood Pellets > Carbon Dioxide
    - Hid redundant ore sorting recipes
    - Re-enabled Coal silo (Angel's Addons - Storage Options)
    - Reverted ore crystallization recipe icons
    - Made Logistic System take pink science rather than yellow science (when possible)
    - Added support for Angel's Industries mod
    - Rebalanced salt to saline water recipe
    - Reverted Polishing wheel to require Wood rather than Wood pellets
    - Reverted Protective scaffolding to require Wood rather than Wood bricks
    - Removed override of Bob's furnaces as this has been implemented in Angel's